service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: ivolve
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
  type: NodePort
